--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="server_mode">Server mode</string>
     <string name="client_mode">Client mode</string>
     <string name="ask_ip">Server IP address:</string>
+    <string name="msgsend_sms">Send SMS</string>
+    <string name="phone_no">Insert Phone Number: </string>
     <string name="send_sms">SEND</string>
     <string name="button_connect">Connect</string>
     <string name="error_address">Address not recognized</string>
