--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,10 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="LostConnectionServerWithClient">Perdeu se a conectão com um dos clientes.</string>
+    <string name="LostConnectioWithServer">Lost connection with Server.</string>
+    <string name="CantConnectToServer">Can\'t connect to server</string>
+    <string name="serverIpNotFound">Server IP not found</string>
 
 
 </resources>
